# airpixel

./: .flake8  .gitignore  .pylintrc  .travis.yml  LICENSE  Pipfile  README.md  README.rst  airpixel.json  airpixel.yaml  blink.py  monitor.yaml  protocol.md  pyproject.toml  raspberryap.sh  requirements.txt  setup.py  tox.ini
.github/workflows/: Publish.yml  QualityAssurance.yml  docker_release.yml  main.yml  package_release.yml
ArduinoNanoIOT/: ArduinoNanoIOT.ino  Dockerfile  config.h  run.py
ArduinoNanoIOT/Airpixel/: activeState.cpp  activeState.h  config.h  connectedState.cpp  connectedState.h  constants.h  disconnectedState.cpp  disconnectedState.h  globalState.cpp  globalState.h  library.properties  state.h  tcpEstablishedState.cpp  tcpEstablishedState.h
ArduinoNanoIOT/lib/: connectedState.cpp  connectedState.h  constants.h  disconnectedState.h  globalState.h  state.h  tcpEstablishedState.cpp  tcpEstablishedState.h
ESP8266airpixel/: ESP8266airpixel.ino  config_template copy.h  config_template.h
airpixel/: __init__.py  __main__.py  client.py  dummy.py  framework.py  gamma_table.py  logging_config.py  monitor.py  monitoring.py  qt5_client.py  ring_client.py  stub_device.py
tests/: conftest.py  test_client.py  test_framework.py  test_monitoring.py
