[tool.poetry]
name = "airpixel"
version = "0.8"
description = "Controll LEDs with arduinoNanoIOT and Python"
authors = []

[tool.poetry.dependencies]
python = "^3.8"
pytest = {version = "^5.4.2", optional = true}
black = {version = "^19.10b0", optional = true}
mypy = {version = "^0.770", optional = true}
flake8 = {version = "^3.8.1", optional = true}
numpy = "^1.19.1"
pyyaml = "^5.3.1"
pyqtgraph = {version = "^0.11.0", optional = true}
pyqt5 = {version = "^5.15.0", optional = true}

[tool.poetry.dev-dependencies]
tox = "^3.15.0"
readable-log-formatter = "^0.1.4"

[tool.poetry.extras]
test = ["pytest"]
typecheck = ["mypy"]
lint = ["black", "flake8"]
monitoring = ["pyqt5", "pyqtgraph"]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = lint,typecheck,test

[testenv:lint]
extras =
    lint
commands =
    black airpixel tests {tty::--diff}
    flake8 airpixel tests --max-line-length=88 --ignore=E203,W503

[testenv:typecheck]
extras =
    typecheck
commands =
    mypy airpixel --disallow-untyped-defs

[testenv:test]
extras =
    test
commands =
    pytest
"""
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

